--- a/tmux.conf
+++ b/tmux.conf
@@ -1,7 +1,10 @@
 set-option -g status on
-set-option -g status-utf8 on
+#set-option -g status-utf8 on
 
-set -g default-terminal "screen-256color"
+#set -g default-terminal "screen-256color"
+
+run-shell "powerline-daemon -q"
+source "/usr/lib/python3.5/site-packages/powerline/bindings/tmux/powerline.conf"
 
 # Act like vim
 setw -g mode-keys vi
@@ -13,15 +16,15 @@ bind-key -r C-h select-window -t :-
 bind-key -r C-l select-window -t :+
 
 # Act like GNU screen
-unbind C-b
-set -g prefix C-j
 set -g prefix C-a
-#set -g prefix M-a
-#bind-key M-a send-prefix
+unbind C-b
+bind C-a send-prefix
 
+unbind r
 bind r source-file ~/.tmux.conf
+
+unbind ^A
 bind ^A select-pane -t :.+
-#bind ^w ^w select-pane -t :.+
 
 # Activity
 setw -g monitor-activity on
