Updated files to work on both computers

--- a/tmux.conf
+++ b/tmux.conf
@@ -1,10 +1,4 @@
 set-option -g status on
-#set-option -g status-utf8 on
-
-#set -g default-terminal "screen-256color"
-
-run-shell "powerline-daemon -q"
-source "/usr/lib/python3.5/site-packages/powerline/bindings/tmux/powerline.conf"
 
 # Act like vim
 setw -g mode-keys vi
@@ -16,16 +10,18 @@ bind-key -r C-h select-window -t :-
 bind-key -r C-l select-window -t :+
 
 # Act like GNU screen
-set -g prefix C-a
 unbind C-b
-bind C-a send-prefix
+set -g prefix C-j
+set -g prefix C-a
 
-unbind r
+
 bind r source-file ~/.tmux.conf
-
-unbind ^A
 bind ^A select-pane -t :.+
+#bind ^w ^w select-pane -t :.+
 
 # Activity
 setw -g monitor-activity on
 set -g visual-activity off
+
+run-shell "powerline-daemon -q"
+source "/usr/lib/python3.5/site-packages/powerline/bindings/tmux/powerline.conf"
