--- a/tmux.conf
+++ b/tmux.conf
@@ -23,5 +23,4 @@ bind ^A select-pane -t :.+
 setw -g monitor-activity on
 set -g visual-activity off
 
-run-shell "powerline-daemon -q"
-source "/usr/lib/python3.5/site-packages/powerline/bindings/tmux/powerline.conf"
+run-shell "powerline-config tmux setup"
